[package]
name = "sdl2-unifont"
version = "0.1.0"

authors = ["Carl Albrecht <invlpg@protonmail.com>"]
license = "GPLv3"

description = "Embedded GNU Unifont for Rust SDL programs for simple font rendering tasks"
repository = "https://github.com/invlpg/sdl2-unifont"

categories = ["gui", "rendering::data-formats"]
keywords = ["text", "font", "sdl", "unicode", "unifont"]

build = "build.rs"

[features]
# By default, we include the Basic Multilingual Plane, but not the Supplementary
# plane. The SMP is generally only useful for emoji support, so only specify the
# "plane-1" feature if you are expecting to need to render them.
default = ["plane-0"]

# Features to include the Unicode BMP or SMP
plane-0 = []
plane-1 = []

[dependencies]
sdl2 = "0.31.0"
maplit = "1.0.1"
lazy_static = "1.1.0"
